tests/baselines/reference/interfaceWithStringIndexerHidingBaseTypeIndexer3.errors.txt
interfaceWithStringIndexerHidingBaseTypeIndexer3.ts(13,5): error TS2411: Property '2' of type '{ a: number; }' is not assignable to 'number' index type '{ a: number; b: number; }'.


==== interfaceWithStringIndexerHidingBaseTypeIndexer3.ts (1 errors) ====
    interface Base {
        [x: number]: { a: number }
        1: {
            a: number; b: number;
        }
    }
    
    interface Derived extends Base {
        [x: number]: {
            a: number; b: number
        };
        // error
        2: {
        ~
!!! error TS2411: Property '2' of type '{ a: number; }' is not assignable to 'number' index type '{ a: number; b: number; }'.
            a: number;
        }
    }